2011-01-07 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-info-mode-completions-section-initialize):
	Write implementation.
	(epackage-info-mode-tab-command): Implement 'Section:' header
	completion.
	(epackage-info-mode): Call `epackage-info-mode-pcomplete-variables'.
	(epackage-info-mode-pcomplete-list): Rewrite complete code.

2011-01-06  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-info-mode-tab-standard): New.
	(epackage-info-mode-tab-command): Use
	`epackage-info-mode-tab-standard'.
	(epackage-field-name): Correct regexp.
	(epackage-info-mode-set-variables): Set `tab-stop-list' by 4.
	(epackage-info-mode-tab-standard): Change
	`indent-for-tab-command' to `tab-to-tab-stop'.

2010-12-27 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el: (Spec): add 'Custom' to License. Add new field
	'License-Text'.
	(epackage-eval-file): Use `insert-file-contents', drop
	(epackage-write-region): New.
	(epackage--info-mode-completions-license): Add 'Custom'.

	*-literally.
	(epackage-combine-files): Use `insert-file-contents', drop
	*-literally.
	(epackage-loader-file-insert-install-code): Use
	`insert-file-contents', drop*-literally.

2010-12-25 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-url-encode): New.
	(epackage-info-mode-tab-wiki): Add Google search.
	(epackage-info-mode-pcomplete-list): Remove
	`pcomplete-default-completion-function'.
	(epackage--info-mode-completions-section): New.
	(epackage-info-mode-completions-section-initialize): New.

2010-12-24 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--info-mode-completions-status): Rename.
	(epackage--info-mode-completions-license): Rename.
	(epackage--info-mode-completions-current): Rename.
	(epackage-info-mode-pcomplete-list): New.
	(epackage-info-mode-set-variables): add `tab-stop-list'.
	(epackage-info-mode-tab): Improve handling of 'Description:'.
	(epackage-info-mode-tab-wiki): New.

2010-12-23 Thu  Jari Aalto  <jari.aalto@cante.net>
